--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   <title>NFT preview card component</title>
-  <style rel="stylesheet" href="styles.css"></style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -20,10 +20,10 @@
           <path d="M24 9C14 9 5.46 15.22 2 24c3.46 8.78 12 15 22 15 10.01 0 18.54-6.22 22-15-3.46-8.78-11.99-15-22-15Zm0 25c-5.52 0-10-4.48-10-10s4.48-10 10-10 10 4.48 10 10-4.48 10-10 10Zm0-16c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6Z" fill="#FFF" fill-rule="nonzero"/>
         </g>
       </svg>
-      <img class="card__img" src="images\image-equilibrium.jpg">
+      <img class="card__img" alt="Equilibrium NFT"src="images\image-equilibrium.jpg">
     </div>
     <h1 class="card__title">Equilibrium #3429</h1>
-    <p class="card__desc">
+    <p class="card__desc text--blue text--thin">
       Our Equilibrium collection promotes balance and calm.
     </p>
     <div class="card__info">
@@ -34,13 +34,19 @@
         <span class="price">0.041 ETH</span>
       </div>
 
-      <div class="time-left">3 days left</div>
+      <div class="time-left text--blue text--thin">
+        <svg class="clock-icon" width="17" height="17" xmlns="http://www.w3.org/2000/svg">
+          <path d="M8.305 2.007a6.667 6.667 0 1 0 0 13.334 6.667 6.667 0 0 0 0-13.334Zm2.667 7.334H8.305a.667.667 0 0 1-.667-.667V6.007a.667.667 0 0 1 1.334 0v2h2a.667.667 0 0 1 0 1.334Z" fill="#8BACD9"/>
+        </svg>
+        <span>3 days left</span></div>
     </div>
-    
-    <div class="footer">
+    <hr>
+    <footer class="footer">
       <img class="footer__avatar" src="images\image-avatar.png">
-      <span class="footer__desc">Creation of Jules Wyvern</span>
-    </div>
+      <span class="footer__desc text--blue text--thin">Creation of 
+        <span class="footer__name text--white">Jules Wyvern</span>
+      </span>
+    </footer>
   </div>
 
   
